--- a/MyWebServer/MyWebServer.csproj
+++ b/MyWebServer/MyWebServer.csproj
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -37,19 +36,19 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ConnectionHandler.cs" />
-    <Compile Include="WebSerwer.cs" />
-    <Compile Include="Reqest.cs" />
-    <Compile Include="HttpHandler\IHttpHandler.cs" />
-    <Compile Include="HttpHandler\GetReqestHandler.cs" />
-    <Compile Include="ServerExceptions\ExceptionCode.cs" />
-    <Compile Include="Response.cs" />
-    <Compile Include="Reader.cs" />
-    <Compile Include="MIME\IMIME.cs" />
-    <Compile Include="MIME\HttpMIME.cs" />
     <Compile Include="WebServerConfig\WebServerConfig.cs" />
     <Compile Include="WebServerConfig\ErrorServerConfig.cs" />
     <Compile Include="WebServerConfig\IConfigRead.cs" />
+    <Compile Include="ConnectionHandler.cs" />
+    <Compile Include="Reader.cs" />
+    <Compile Include="Reqest.cs" />
+    <Compile Include="Response.cs" />
+    <Compile Include="WebSerwer.cs" />
+    <Compile Include="ServerExceptions\ExceptionCode.cs" />
+    <Compile Include="HttpHandler\GetReqestHandler.cs" />
+    <Compile Include="MIME\HttpMIME.cs" />
+    <Compile Include="MIME\IMIME.cs" />
+    <Compile Include="HttpHandler\IHttpHandler.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -57,6 +56,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="WebServerConfig\" />
+    <Folder Include="ServerExceptions\" />
+    <Folder Include="MIME\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
