--- a/HTTPHandlers/HTTPHandlers.csproj
+++ b/HTTPHandlers/HTTPHandlers.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -31,6 +31,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GIFMIME.cs" />
+    <Compile Include="JPGMIME.cs" />
+    <Compile Include="PNGIMIME.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GetReqestHandler.cs" />
   </ItemGroup>
