--- a/HTTPHandlers/HTTPHandlers.csproj
+++ b/HTTPHandlers/HTTPHandlers.csproj
@@ -37,6 +37,9 @@
     <Compile Include="PNGIMIME.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GetReqestHandler.cs" />
+    <Compile Include="JSIMIME.cs" />
+    <Compile Include="CSSIMIME.cs" />
+    <Compile Include="PHPIMIME.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyWebServer\MyWebServer.csproj">
