--- a/MyWebServer/MyWebServer.csproj
+++ b/MyWebServer/MyWebServer.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Host\IDirectoryReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Host\ConnectionHandler.cs" />
