--- a/MyWebServer/MyWebServer.csproj
+++ b/MyWebServer/MyWebServer.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Config\ReactorPull.cs" />
     <Compile Include="Host\IDirectoryReader.cs" />
+    <Compile Include="Host\IHostEvents.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Host\ConnectionHandler.cs" />
