--- a/MyWebServer/MyWebServer.csproj
+++ b/MyWebServer/MyWebServer.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Resouces\IItem.cs" />
     <Compile Include="Host\DataHeadersInterfaces\IAddHeader.cs" />
     <Compile Include="Host\DataHeadersInterfaces\IAddData.cs" />
+    <Compile Include="Host\Session\UserConnect.cs" />
+    <Compile Include="Host\Session\UserNotFound.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -69,6 +71,7 @@
   <ItemGroup />
   <ItemGroup>
     <Folder Include="Host\DataHeadersInterfaces\" />
+    <Folder Include="Host\Session\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
