modify Http Handler to receive data after headers

--- a/HTTPHandlers/HTTPHandlers.csproj
+++ b/HTTPHandlers/HTTPHandlers.csproj
@@ -43,6 +43,7 @@
     <Compile Include="CSSIMIME.cs" />
     <Compile Include="PHPIMIME.cs" />
     <Compile Include="StandartViewer.cs" />
+    <Compile Include="POSTReqestHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyWebServer\MyWebServer.csproj">
