--- a/HTTPHandlers/HTTPHandlers.csproj
+++ b/HTTPHandlers/HTTPHandlers.csproj
@@ -34,22 +34,30 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GIFMIME.cs" />
-    <Compile Include="JPGMIME.cs" />
-    <Compile Include="PNGIMIME.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GetReqestHandler.cs" />
-    <Compile Include="JSIMIME.cs" />
-    <Compile Include="CSSIMIME.cs" />
-    <Compile Include="PHPIMIME.cs" />
     <Compile Include="StandartViewer.cs" />
-    <Compile Include="POSTReqestHandler.cs" />
+    <Compile Include="HTTPHandlers\GetReqestHandler.cs" />
+    <Compile Include="HTTPHandlers\POSTReqestHandler.cs" />
+    <Compile Include="MIMEHandlers\CSSIMIME.cs" />
+    <Compile Include="MIMEHandlers\GIFMIME.cs" />
+    <Compile Include="MIMEHandlers\JPGMIME.cs" />
+    <Compile Include="MIMEHandlers\JSIMIME.cs" />
+    <Compile Include="MIMEHandlers\PHPIMIME.cs" />
+    <Compile Include="MIMEHandlers\PNGIMIME.cs" />
+    <Compile Include="MIMEHandlers\XMLMIME.cs" />
+    <Compile Include="MIMEHandlers\MDIMIME.cs" />
+    <Compile Include="MIMEHandlers\PlainTextMIME.cs" />
+    <Compile Include="MIMEHandlers\CSVMIME.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyWebServer\MyWebServer.csproj">
       <Project>{6A3F8C5A-0060-450B-8AC1-431C42F85528}</Project>
       <Name>MyWebServer</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="HTTPHandlers\" />
+    <Folder Include="MIMEHandlers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
