regular rewriting post and get requests also adding some class for parsing headers and store receiving data

--- a/MyWebServer/MyWebServer.csproj
+++ b/MyWebServer/MyWebServer.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Host\DataHeadersInterfaces\IAddData.cs" />
     <Compile Include="Host\Session\UserConnect.cs" />
     <Compile Include="Host\Session\UserNotFound.cs" />
+    <Compile Include="Host\DataInput\ABSReqestData.cs" />
+    <Compile Include="Host\DataInput\StringData.cs" />
+    <Compile Include="Host\DataInput\FileData.cs" />
+    <Compile Include="Host\HeaderData\HeaderValueMain.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -72,6 +76,8 @@
   <ItemGroup>
     <Folder Include="Host\DataHeadersInterfaces\" />
     <Folder Include="Host\Session\" />
+    <Folder Include="Host\DataInput\" />
+    <Folder Include="Host\HeaderData\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
