--- a/MyWebServer/MyWebServer.csproj
+++ b/MyWebServer/MyWebServer.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Host\Users\UserBank.cs" />
     <Compile Include="Host\Users\UserInfo.cs" />
     <Compile Include="Host\Users\GroupInfo.cs" />
+    <Compile Include="Host\ServerExceptions\Exceptions\SwitchingProtocolsFabric.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
