--- a/MyWebServer/MyWebServer.csproj
+++ b/MyWebServer/MyWebServer.csproj
@@ -42,7 +42,6 @@
     <Compile Include="Host\ConnectionHandlers\websocket\WebSocketHandler.cs" />
     <Compile Include="Host\Eventer\IGrub.cs" />
     <Compile Include="Host\IDirectoryReader.cs" />
-    <Compile Include="Host\IHostEvents.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Host\Reader.cs" />
@@ -81,6 +80,7 @@
     <Compile Include="Host\ConnectionHandlers\websocket\WebSocketStream.cs" />
     <Compile Include="Host\ConnectionHandlers\websocket\WebSocketException.cs" />
     <Compile Include="Assets\MyRandom.cs" />
+    <Compile Include="Host\Eventer\IHostEvents.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
