--- a/DirReader/DirReader.csproj
+++ b/DirReader/DirReader.csproj
@@ -1,14 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ECDD3A13-B07A-47C2-AF7D-DDD946AC1F26}</ProjectGuid>
+    <ProjectGuid>{7FDAB8BF-8C5A-4BAB-8193-B5EE8ED240FB}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>HTTPHandlers</RootNamespace>
-    <AssemblyName>HTTPHandlers</AssemblyName>
+    <RootNamespace>DirReader</RootNamespace>
+    <AssemblyName>DirReader</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <SynchReleaseVersion>false</SynchReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -19,7 +18,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
@@ -30,34 +28,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.XML" />
-    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="HTTPHandlers\GetReqestHandler.cs" />
-    <Compile Include="HTTPHandlers\POSTReqestHandler.cs" />
-    <Compile Include="MIMEHandlers\CSSIMIME.cs" />
-    <Compile Include="MIMEHandlers\GIFMIME.cs" />
-    <Compile Include="MIMEHandlers\JPGMIME.cs" />
-    <Compile Include="MIMEHandlers\JSIMIME.cs" />
-    <Compile Include="MIMEHandlers\PNGIMIME.cs" />
-    <Compile Include="MIMEHandlers\XMLMIME.cs" />
-    <Compile Include="MIMEHandlers\MDIMIME.cs" />
-    <Compile Include="MIMEHandlers\PlainTextMIME.cs" />
-    <Compile Include="MIMEHandlers\CSVMIME.cs" />
-    <Compile Include="MIMEHandlers\HtmlMIME.cs" />
-    <Compile Include="MIMEHandlers\UhtmlMIME.cs" />
+    <Compile Include="DirMIME.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyWebServer\MyWebServer.csproj">
       <Project>{6A3F8C5A-0060-450B-8AC1-431C42F85528}</Project>
       <Name>MyWebServer</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="HTTPHandlers\" />
-    <Folder Include="MIMEHandlers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
