--- a/MyWebServer/MyWebServer.csproj
+++ b/MyWebServer/MyWebServer.csproj
@@ -40,11 +40,12 @@
     <Compile Include="Config\ReactorPull.cs" />
     <Compile Include="Host\ConnectionHandlers\Controll\ExecutorExceptions\ConnectionExecutorException.cs" />
     <Compile Include="Host\ConnectionHandlers\Controll\IConnetion.cs" />
+    <Compile Include="Host\Reader\Reader.cs" />
     <Compile Include="Host\ConnectionHandlers\websocket\WebSocketHandler.cs" />
     <Compile Include="Host\Eventer\ABSGrub.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Host\Reader.cs" />
+    <Compile Include="Host\Reader\IReader.cs" />
     <Compile Include="Host\Repository.cs" />
     <Compile Include="Host\WebSerwer.cs" />
     <Compile Include="Host\HttpHandler\ABSHttpHandler.cs" />
