--- a/UModule/UModule.csproj
+++ b/UModule/UModule.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="ABSUModule.cs" />
     <Compile Include="handlers\Handler.cs" />
+    <Compile Include="handlers\PageHandler.cs" />
     <Compile Include="Interactive.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\TestHandler.cs" />
