--- a/UModule/UModule.csproj
+++ b/UModule/UModule.csproj
@@ -43,6 +43,7 @@
     <Compile Include="handlers\Handler.cs" />
     <Compile Include="handlers\PageHandler.cs" />
     <Compile Include="Interactive.cs" />
+    <Compile Include="Loader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\TestHandler.cs" />
     <Compile Include="UhtmlMIME.cs" />
