--- a/UModule/UModule.csproj
+++ b/UModule/UModule.csproj
@@ -62,6 +62,11 @@
       <Name>MyWebServer</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="handlers\Page\jsScripts\Connect.js" />
+    <Content Include="handlers\Page\jsScripts\Main.js" />
+    <Content Include="handlers\Page\jsScripts\Serialize.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
